# paper-mate

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: gradio_app.py  prompts.py
src/core/: config.py
src/rag/: llm.py  pipeline.py  reranker.py  retriever.py
